# grimar-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/grimar/assets/: AssetManager.hpp  Texture2D.hpp
include/grimar/core/: Assert.hpp  Log.hpp  Time.hpp
include/grimar/engine/: EngineApp.hpp
include/grimar/platform/: Input.hpp  Window.hpp
include/grimar/render/: Camera2D.hpp  Color.hpp  Rect.hpp  Renderer2D.hpp  SdlRenderer2D.hpp
src/: main.cpp
src/assets/: AssetManager.cpp  Texture2D.cpp
src/core/: Assert.cpp  Log.cpp  Time.cpp  dummy.cpp
src/engine/: EngineApp.cpp
src/platform/: Input.cpp  Window.cpp
src/render/: SdlRenderer2D.cpp
